Add blocks to every page. Add navigation on index page

--- a/src/pug/includes/modules/content/famous-clients.pug
+++ b/src/pug/includes/modules/content/famous-clients.pug
@@ -149,7 +149,7 @@
   ]
 
 section.famous-clients
-  .famous-client__content.container
+  .famous-clients__content.container
     h2.famous-clients__title.heading Нам доверяют
     .slider
       button.slider__button.slider__button_prev(aria-label="Предыдущий слайд")
