--- a/src/pug/pages/back-massage.pug
+++ b/src/pug/pages/back-massage.pug
@@ -54,6 +54,9 @@ block variables
           }
         ]
       },
+      massageResults: {
+        title: 'Результаты лечебного массажа спины'
+      },
       reviewsBlock: {
         title: 'Отзывы о&nbsp;нас',
         reviews: [
