--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -57,6 +57,9 @@ block variables
           }
         ]
       },
+      massageResults: {
+        title: 'Результаты нашего массажа'
+      },
       reviewsBlock: {
         title: 'Отзывы о&nbsp;нас',
         showSticker: true,
@@ -122,6 +125,7 @@ block content
   include ../includes/modules/content/reviews-block
   include ../includes/modules/content/massage-types
   include ../includes/modules/content/massage-choosing-test
+  include ../includes/modules/content/massage-results/wrap
   include ../includes/modules/content/famous-clients
   include ../includes/modules/content/video-reviews
   include ../includes/modules/content/price-list
