--- a/src/pug/pages/japanese-asahi-massage.pug
+++ b/src/pug/pages/japanese-asahi-massage.pug
@@ -50,6 +50,9 @@ block variables
           }
         ]
       },
+      massageResults: {
+        title: 'Результаты массажа лица'
+      },
       reviewsBlock: {
         title: 'Отзывы о&nbsp;массаже лица',
         reviews: [
@@ -110,6 +113,7 @@ block variables
 
 block content
   include ../includes/modules/content/application-form/application-block
+  include ../includes/modules/content/massage-results/wrap
   include ../includes/modules/content/reviews-block
   include ../includes/modules/content/features-list
   include ../includes/modules/content/price-list
