--- a/src/pug/pages/anti-cellulite-massage.pug
+++ b/src/pug/pages/anti-cellulite-massage.pug
@@ -51,6 +51,9 @@ block variables
           }
         ]
       },
+      massageResults: {
+        title: 'Результаты антицеллюлитного массажа'
+      },
       reviewsBlock: {
         title: 'Отзывы об&nbsp;антицеллюлитном массаже',
         reviews: [
@@ -111,6 +114,7 @@ block variables
 
 block content
   include ../includes/modules/content/application-form/application-block
+  include ../includes/modules/content/massage-results/wrap
   include ../includes/modules/content/reviews-block
   include ../includes/modules/content/features-list
   include ../includes/modules/content/price-list
