--- a/src/pug/pages/chiromassage.pug
+++ b/src/pug/pages/chiromassage.pug
@@ -48,6 +48,9 @@ block variables
           }
         ]
       },
+      massageResults: {
+        title: 'Результаты массажа лица'
+      },
       reviewsBlock: {
         title: 'Отзывы о&nbsp;массаже лица',
         reviews: [
@@ -108,6 +111,7 @@ block variables
 
 block content
   include ../includes/modules/content/application-form/application-block
+  include ../includes/modules/content/massage-results/wrap
   include ../includes/modules/content/reviews-block
   include ../includes/modules/content/features-list
   include ../includes/modules/content/price-list
