--- a/src/pug/pages/figure-modeling.pug
+++ b/src/pug/pages/figure-modeling.pug
@@ -53,6 +53,9 @@ block variables
           }
         ]
       },
+      massageResults: {
+        title: 'Результаты ручного моделирования'
+      },
       reviewsBlock: {
         title: 'Отзывы о&nbsp;ручном моделировании фигуры',
         reviews: [
@@ -113,6 +116,7 @@ block variables
 
 block content
   include ../includes/modules/content/application-form/application-block
+  include ../includes/modules/content/massage-results/wrap
   include ../includes/modules/content/reviews-block
   include ../includes/modules/content/features-list
   include ../includes/modules/content/price-list
