--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -58,7 +58,13 @@ block variables
         ]
       },
       massageResults: {
-        title: 'Результаты нашего массажа'
+        title: 'Результаты нашего массажа',
+        face: {
+          slidesOrder: [1]
+        },
+        figure: {
+          slidesOrder: [1]
+        }
       },
       reviewsBlock: {
         title: 'Отзывы о&nbsp;нас',
