Add basic onscroll behavior. Add states enums and throttle function. Fix slider buttons. Fix famous clients photo

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -50,6 +50,8 @@
 @use 'blocks/menu/main-menu';
 @use 'blocks/menu/submenu';
 
+@use 'blocks/scroll-top-button/scroll-top-button';
+
 @use 'blocks/application-form/application-form';
 
 @use 'blocks/features-list/features-list';
