--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -56,6 +56,7 @@ html(lang='ru')
         include ../includes/modules/header/header
       main.page__content
         include ../includes/modules/main-screen/main-screen
+        include ../includes/modules/content/scroll-top-button
         block content
       .page__footer
         include ../includes/modules/footer/footer
