--- a/src/pug/includes/modules/content/massage-types.pug
+++ b/src/pug/includes/modules/content/massage-types.pug
@@ -12,6 +12,9 @@ mixin massage-card(massage, tags, text, customTitle)
     .massage-card__image
 
 section.massage-types
+  article.massage-types__sticker.massage-types__sticker_first.sticker
+    +svg-icon('#polystar').sticker__image
+    b.sticker__secondary-text Мы работаем по&nbsp;авторским и&nbsp;лучшим мировым методикам
   .container
     .massage-types__content
       h2.heading.massage-types__title Виды массажа в&nbsp;нашей клинике
