--- a/src/assets/scss/blocks/reviews-block/reviews-sticker.scss
+++ b/src/assets/scss/blocks/reviews-block/reviews-sticker.scss
@@ -6,14 +6,12 @@
   position: relative;
 
   margin: 0 auto;
-  margin-top: 5rem;
+  margin-bottom: 4rem;
   padding: 4rem;
   padding-bottom: 5rem;
 
   .sticker__image {
     z-index: -1;
-
-    fill: #e5f5ff;
   }
 
   &__pre-number,
