--- a/src/pug/pages/anti-cellulite-massage.pug
+++ b/src/pug/pages/anti-cellulite-massage.pug
@@ -43,8 +43,8 @@ block variables
         {
           title: 'Это очень больно? Будут синяки?',
           text: [
-            'Мы нашли способ сохранить мощный эффект и уменьшить чувствительность процедуры. Почти все наши клиенты, которые делали антицеллюлитный массаж в других центрах, говорили, что ощущали сильную боль, но наша процедура была гораздо приятнее ожидаемого :)',
-            'Однако техника воздействия довольно глубокая, массажист тщательно и активно прорабатывает ткани, разминает жировые отложения, и местами может быть слегка чувствительно. Но не больно, обещаем.',
+            'Мы нашли способ сохранить мощный эффект и уменьшить чувствитель&shy;ность процедуры. Почти все наши клиенты, которые делали антицел&shy;люлитный массаж в других центрах, говорили, что ощущали сильную боль, но наша процедура была гораздо приятнее ожидаемого&nbsp;:)',
+            'Однако техника воздействия довольно глубокая, массажист тщательно и активно прорабатывает ткани, разминает жировые отложения, и местами может быть слегка чувстви&shy;тельно. Но не больно, обещаем.',
             'Синяки появляются очень редко, только в случае слабых сосудов. Даже если они появятся, то будут незначительными и пройдут уже к следующему сеансу. '
           ]
         },
@@ -52,7 +52,7 @@ block variables
           title: 'Поможет ли антицеллюлитный массаж похудеть?',
           text: [
             'В первую очередь антицеллюлитный массаж направлен на качество кожи, на её подтягивание и укрепление. Конечно, фигура станет лучше, контуры изменятся, рыхлая кожа подтянется и вы будете выглядеть стройнее.',
-            `Но этот эффект будет заметнее, если у вас не очень много лишнего веса. Если вы хотите похудеть значительно, уменьшить объёмы и лишний вес, будет лучше сделать процедуру, направленную и на похудение, и на уменьшение целлюлита — <a class='link link_primary' href='figure-modeling.html'>ручное моделирование фигуры</a>`
+            `Но этот эффект будет заметнее, если у вас не очень много лишнего веса. Если вы хотите похудеть значитель&shy;но, уменьшить объёмы и лишний вес, будет лучше сделать процедуру, направленную и на похудение, и на уменьшение целлюлита — <a class='link link_primary' href='figure-modeling.html'>ручное моделирование фигуры</a>.`
           ]
         }
       ],
