--- a/src/pug/pages/body-lymphatic-drainage.pug
+++ b/src/pug/pages/body-lymphatic-drainage.pug
@@ -51,7 +51,7 @@ block variables
           title: 'Поможет ли лимфодренажный массаж убрать целлюлит и похудеть?',
           text: [
             'В первую очередь лимфодренаж направлен на здоровье, на улучшение абсолютно всех процессов в организме. С хорошо работающей лимфосистемой ваш организм перестанет задерживать воду, что отчасти отразится на весе, объёмах и качестве кожи.',
-            `Но если вы хотите значительно снизить вес, убрать объёмы и целлюлит, мы рекомендуем <a class='link link_primary' href='figure-modeling.html'>процедуру ручного моделирования</a>, она эффективнее. А если вам важнее вывести токсины, убрать тяжесть в ногах и отёки по всему телу, вам отлично подойдёт лимфодренажный массаж.`
+            `Но если вы хотите значительно снизить вес, убрать объёмы и целлюлит, мы рекомендуем <a class='link link_primary' href='figure-modeling.html'>процедуру ручного моделирова&shy;ния</a>, она эффективнее. А если вам важнее вывести токсины, убрать тяжесть в ногах и отёки по всему телу, вам отлично подойдёт лимфодренажный массаж.`
           ]
         }
       ],
