--- a/src/pug/pages/chiromassage.pug
+++ b/src/pug/pages/chiromassage.pug
@@ -35,9 +35,9 @@ block variables
         {
           title: 'Что это за процедура?',
           text: [
-            'Хиромассаж, или испанский массаж — это комбинация европейской техники массажа с восточными. Процедура может включать пассивную йогу, мануальную терапию, ритмическую акупрессуру и другие техники. Приёмов очень много, и мастер подберёт именно те, которые вам подойдут.',
+            'Хиромассаж, или испанский массаж — это комбинация европейской техники массажа с восточными. Процедура может включать пассивную йогу, мануальную терапию, ритмическую акупрессуру и другие тех&shy;ники. Приёмов очень много, и мастер подберёт именно те, которые вам подойдут.',
             'Такая бережная, но тщательная проработка, подобранная специально для вашего лица, позволит снять зажимы и спазмы с каждой мышцы. Улучшится лимфоток, кожа насытится кислородом, морщинки станут менее заметными.',
-            'При этом хиромассаж — одна из самых приятных и расслабляющих процедур для лица, в её основе лежит принцип удовольствия на протяжении всего времени сеанса. '
+            'При этом хиромассаж — одна из самых приятных и рассла&shy;бляющих процедур для лица, в её основе лежит принцип удовольствия на протяжении всего времени сеанса. '
           ]
         },
         {
@@ -48,7 +48,7 @@ block variables
           ]
         },
         {
-          title: 'Как этот массаж улучшает эмоциональное состояние?',
+          title: 'Как массаж улучшает эмоциональное состояние?',
           text: [
             'Хиромассаж включает более 100 приёмов, подбираемых прямо во время процедуры. Некоторые из них не только омолаживают лицо и подтягивают ткани, но и снимают возбуждение с центральной нервной системы.',
             'Благодаря этому стабилизируется эмоциональный фон, а приятная и комфортная процедура убирает и сам стресс, и его внешние проявления.',
