--- a/src/pug/pages/classic-facial-massage.pug
+++ b/src/pug/pages/classic-facial-massage.pug
@@ -34,15 +34,15 @@ block variables
         {
           title: 'Что это за процедура?',
           text: [
-            'Классический массаж лица – одна из самых мягких методик массажа. В этой бережной и спокойной технике используются только плавные, скользящие движения, строго по массажным линиям и с минимальным давлением.',
-            'Несмотря на мягкость этой процедуры, она отлично расслабляет мышцы лица, улучшает тонус кожи, и возвращает здоровый цвет лица.'
+            'Классический массаж лица – одна из самых мягких методик масса&shy;жа. В этой бережной и спокойной технике используются только плавные, скользящие движения, строго по массажным линиям и с минимальным давлением.',
+            'Несмотря на мягкость этой процедуры, она отлично рас&shy;слабляет мышцы лица, улучшает тонус кожи, и воз&shy;вращает здоровый цвет лица.'
           ]
         },
         {
           title: 'Какой будет результат?',
           text: [
-            'Массажист снимет с каждой мышцы лица спазм и усталость, и это сразу отразится на качестве кожи. Уменьшится выраженность морщин, возрастные недостатки станут менее заметны.',
-            'Благодаря притоку крови, улучшится цвет лица, клетки насытятся кислородом, кожа станет более упругой. Однако, достичь сильного лифтинг-эффекта с помощью классической техники, довольно трудно.'
+            'Массажист снимет с каждой мышцы лица спазм и усталость, и это сразу отразится на качестве кожи. Уменьшится выраженность морщин, возрастные недос&shy;татки станут менее заметны.',
+            'Благодаря притоку крови, улучшится цвет лица, клетки насытятся кисло&shy;родом, кожа станет более упругой. Однако, достичь сильного лифтинг-эффекта с помощью классичес&shy;кой техники, довольно трудно.'
           ]
         },
         {
