--- a/src/pug/pages/facial-lymphatic-drainage.pug
+++ b/src/pug/pages/facial-lymphatic-drainage.pug
@@ -34,8 +34,8 @@ block variables
         {
           title: 'Что это за процедура?',
           text: [
-            'Принципы лимфодренажного массажа одинаковы для лица, и тела — специалист воздействует на лимфу по направлению лимфотока, чтобы разогнать ее и вывести лишнюю жидкость.',
-            'Массажист, с помощью специальных движений, устраняет застой лимфы, улучшает её циркуляцию, и полностью убирает отёки. Массаж запускает процесс питания клеток и тканей, выводит токсины, улучшает состояние кожи и тонус мышц.'
+            'Принципы лимфодренаж&shy;ного массажа одинаковы для лица, и тела — специалист воздействует на лимфу по направлению лимфотока, чтобы разогнать ее и вывести лишнюю жидкость.',
+            'Массажист, с помощью специ&shy;альных движений, устраняет застой лимфы, улучшает её циркуляцию, и полностью убирает отёки. Массаж запускает процесс питания клеток и тка&shy;ней, выводит токсины, улучшает состояние кожи и тонус мышц.'
           ]
         },
         {
@@ -48,7 +48,7 @@ block variables
         {
           title: 'Кому подойдёт этот массаж?',
           text: [
-            `Всем, чья основная цель — снять выраженные отёки и улучшить цвет лица. Правда, если отёки регулярно появляются не только на лице, вам нужен <a class='link link_primary' href='body-lymphatic-drainage.html'>лимфодренажный массаж всего тела</a>, так как он убирает не только проявления, но и причину отёков.`,
+            `Всем, чья основная цель — снять выраженные отёки и улучшить цвет лица. Правда, если отёки регулярно появляются не только на лице, вам нужен <a class='link link_primary' href='body-lymphatic-drainage.html'>лимфодре&shy;нажный массаж всего тела</a>, так как он убирает не только про&shy;явления, но и причину отёков.`,
             'Также лимфодренажный массаж лица помогает уменьшить морщины и жирность кожи, но основная его функция именно в борьбе с отёками.'
           ]
         }
@@ -129,7 +129,6 @@ block variables
     }
 
 block content
-  include ../includes/modules/content/about-massage
   include ../includes/modules/content/about-massage
   include ../includes/modules/content/application-form/application-block
   include ../includes/modules/content/reviews-block
