--- a/src/pug/pages/figure-modeling.pug
+++ b/src/pug/pages/figure-modeling.pug
@@ -50,7 +50,7 @@ block variables
         {
           title: 'Как проходит процедура? Какие будут ощущения?',
           text: [
-            'Процедура состоит из трёх этапов — разгона лимфы, антицеллюлитного массажа и обёртывания. Мы делаем обёртывание на все проблемные зоны: руки, бёдра, живот, ягодицы.',
+            'Процедура состоит из трёх этапов — разгона лимфы, антицеллюлит&shy;ного массажа и обёртывания. Мы делаем обёртывание на все проблемные зоны: руки, бёдра, живот, ягодицы.',
             'Первая часть массажа расслабляющая и приятная, вторая может быть слегка чувствительной из-за глубокого воз- действия. Но вам точно не будет больно. Мастер очень тщательно и глубоко проработает ваши ткани, разомнёт жировые отложения, выведет лишнюю межклеточную жидкость. Синяки бывают очень редко, только если у вас слабые сосуды. Даже если они появятся, то будут очень маленькие и пройдут быстро.'
           ]
         }
