--- a/src/pug/pages/fullbody-massage.pug
+++ b/src/pug/pages/fullbody-massage.pug
@@ -36,22 +36,22 @@ block variables
           text: [
             'Общий массаж — это комплексная процедура, на которой прорабатывается всё ваше тело — руки, ноги, спина, шея, голова. Такой массаж несёт общий оздоровительный эффект на весь организм. Он снимает усталость мышц, заряжает энергией, помогает справиться со стрессом и бессоницей, повышает иммунитет.',
             `60 минут достаточно для качественной проработки всего тела, но если у вас болит спина, вам больше подойдёт <a class='link link_primary' href='back-massage.html'>лечебный массаж спины</a>, где спине уделяется 50 минут, а не 25, как в общем массаже.`,
-            'Если же у вас зажаты или спазмированы руки и ноги, смело приходите на общий массаж. За сеанс мы решим ваши проблемы и полностью проработаем всё тело.'
+            'Если же у вас зажаты или спазми&shy;рованы руки и ноги, смело прихо&shy;дите на общий массаж. За сеанс мы решим ваши проблемы и полностью проработаем всё тело.'
           ]
         },
         {
           title: 'Какой будет результат? ',
           text: [
             'Курс общего массажа значительно поднимет ваш иммунитет, улучшит кровообращение и лимфоток. Также за счёт стимулирования выброса эндорфинов улучшится ваше настроение и вы заметите, что стали активнее и счастливее.',
-            'Сразу после сеанса вы почувствуете себя отдохнувшим и бодрым, как после небольшого отпуска. Ваши мышцы будут расслаблены, но при этом вы почувствуете общий тонус и подъём энергии. Вечером после массажа вы легко заснёте и восстановитесь за ночь лучше, чем обычно.'
+            'Сразу после сеанса вы почувствуете себя отдохнувшим и бодрым, как после небольшого отпуска. Ваши мышцы будут расслаблены, но при этом вы почувствуете общий тонус и подъём энергии. Вечером после массажа вы легко заснёте и восста&shy;новитесь за ночь лучше, чем обычно.'
           ]
         },
         {
           title: 'Кому нужен общий массаж?',
           text: [
             'Тем, у кого нет особых проблем со здоровьем, но хочется чувствовать себя лучше и бодрее. Тем, у кого есть такие проблемы, как стресс, бессоница, мышечная усталость, боль в руках и ногах.',
-            'Также общий массаж это отличный способ провести время с пользой, отдохнуть и по-настоящему расслабиться. Процедура очень приятная и даёт быстрый эффект — для того, чтобы почувствовать себя лучше, достаточно одного сеанса общего массажа.',
-            'А курс надолго закрепит высокий жизненный тонус, хорошее настроение и способность организма справляться со стрессом и болезнями.'
+            'Также общий массаж это отличный способ провести время с пользой, отдохнуть и по-насто&shy;ящему расслабиться. Процедура очень приятная и даёт быстрый эффект — для того, чтобы почув&shy;ствовать себя лучше, достаточно одного сеанса общего массажа.',
+            'А курс надолго закрепит высокий жизненный тонус, хорошее настро&shy;ение и способ&shy;ность организма справ&shy;ляться со стрессом и болезнями.'
           ]
         }
       ],
