--- a/src/pug/pages/japanese-asahi-massage.pug
+++ b/src/pug/pages/japanese-asahi-massage.pug
@@ -34,8 +34,8 @@ block variables
         {
           title: 'Что это за процедура?',
           text: [
-            'С японского языка «Асахи-Зоган» переводится как «создание лица». Это довольно интенсивная техника, проработка глубже, чем в мягких классических массажах, но без боли.',
-            'Процедура направлена на формирование лица, массажист глубоко прорабатывает мышцы и костные ткани. За счёт интенсивной стимуляции лимфатической системы, отёки моментально уходят, кожа становится упругой и подтянутой.',
+            'С японского языка «Асахи-Зоган» переводится как «создание лица». Это довольно интенсив&shy;ная техника, проработка глубже, чем в мягких классических массажах, но без боли.',
+            'Процедура направлена на форми&shy;рование лица, массажист глубоко прорабатывает мышцы и костные ткани. За счёт интенсивной стиму&shy;ляции лимфатической системы, отёки моментально уходят, кожа ста&shy;новится упругой и подтянутой.',
             'При этом не стоит бояться, что кожа растянется от сильного воздействия, наоборот, при японском массаже лицо как будто оживает изнутри.'
           ]
         },
