--- a/src/pug/pages/neck-massage.pug
+++ b/src/pug/pages/neck-massage.pug
@@ -34,23 +34,23 @@ block variables
         {
           title: 'Что это за процедура?',
           text: [
-            'Массаж шейно-воротниковой зоны — это 15-минутный сеанс массажа, направленный на расслабление шейного отдела, снятие воспалений и зажимов, и восстановление подвижности шеи.',
-            'Лучше всего этот сеанс подойдёт тем, у кого нет заболеваний, но есть риски — например, сидячая работа. Из-за небольшой продолжительности и локального воздействия, этот массаж считается профилактическим.',
-            `При проблемах, например неоднократной боли в шее, стоит заняться позвоночником целиком, на сеансе <a class='link link_primary' href='back-massage.html'>лечебного массажа спины</a>`
+            'Массаж шейно-воротниковой зоны — это 15-минутный сеанс массажа, направлен&shy;ный на&nbsp;расслабление шейного отдела, снятие воспалений и зажимов, и восстановление подвижности шеи.',
+            'Лучше всего этот сеанс подойдёт тем, у кого нет заболеваний, но есть риски — например, сидячая работа. Из-за небольшой продолжительности и локаль&shy;ного воздействия, этот массаж считается профилактическим.',
+            `При проблемах, например неодно&shy;кратной боли в шее, стоит заняться позвоноч&shy;ником целиком, на сеансе <a class='link link_primary' href='back-massage.html'>лечебного массажа спины</a>.`
           ]
         },
         {
           title: 'Какой будет результат? ',
           text: [
             'Массаж снимет напряжение мышц, а также улучшит кровообращение в области шеи. Шея расслабится, отступит головная боль и усталость. Если вы лежали или сидели в неудобной позе, массаж уберёт остаточный дискомфорт.',
-            'Прилив крови к мозгу поможет вам лучше концентрироваться, а сама процедура отвлечёт вас от жизненных проблем и успокоит.'
+            'Прилив крови к мозгу помо&shy;жет вам лучше концентри&shy;роваться, а сама процедура отвлечёт вас от жизненных проблем и успокоит.'
           ]
         },
         {
           title: 'Кому подойдёт массаж шейно-воротниковой зоны?',
           text: [
             'Массаж шейного отдела показан водителям и офисным работникам из-за длительного статичного положения, а также всем, кто ведёт малоподвижный образ жизни.',
-            'Почти у всех шейный отдел испытывает серьёзную ежедневную нагрузку, и этот вид массажа поможет в профилактике заболеваний позвоночника.'
+            'Почти у всех шейный отдел испытывает серьёзную ежедневную нагрузку, и этот вид массажа поможет в профилак&shy;тике заболеваний позвоночника.'
           ]
         }
       ],
