--- a/src/pug/pages/sculptural-buccal-massage.pug
+++ b/src/pug/pages/sculptural-buccal-massage.pug
@@ -41,7 +41,7 @@ block variables
         {
           title: 'Какой будет результат?',
           text: [
-            'Ваши мимические морщинки исчезнут, а глубокие значительно сгладятся. Уйдут отёки, мешки под глазами, второй подбородок. Процесс старения замедлится, ваши черта лица станут изящнее, а признаки старения пропадут.'
+            'Ваши мимические морщинки исчезнут, а глубокие значи&shy;тельно сгладятся. Уйдут отёки, мешки под глазами, второй подбородок. Процесс старения замедлится, ваши черта лица станут изящнее, а признаки старения пропадут.'
           ]
         },
         {
