--- a/src/pug/pages/sports-massage.pug
+++ b/src/pug/pages/sports-massage.pug
@@ -36,8 +36,8 @@ block variables
           title: 'Что это за процедура?',
           text: [
             'Спортивный массаж улучшает результаты тренировок. Он способствует развитию гибкости, повышает подвижность суставов, помогает формировать правильные и красивые мышцы.',
-            'Массаж помогает поддерживать  форму во время перерыва в спорте, восстанавливает спортсменов после травм. По сути спортивный массаж — еще одно звено в системе тренировок: он способствует быстрому достижению и удержанию спортивной формы.',
-            'Тренировки, совмещённые со спортивным массажем, становятся значительно эффективнее. Для профессиональных спортсменов, спортивный массаж это обязательная часть жизни, а для любителей — возможность ускорить прогресс и избежать негативного влияния на позвоночник, мышцы и суставы'
+            'Массаж помогает поддерживать  форму во время перерыва в спорте, восстанавливает спортс&shy;менов после травм. По сути спортивный массаж — еще одно звено в системе трени&shy;ровок: он способствует быст&shy;рому достижению и удер&shy;жанию спортивной формы.',
+            'Тренировки, совмещённые со спортивным массажем, становятся значительно эффективнее. Для профессиональных спортсменов, спортивный массаж это обязательная часть жизни, а для любите&shy;лей — возможность ускорить прогресс и избежать негатив&shy;ного влияния на позво&shy;ночник, мышцы и суставы'
           ]
         },
         {
@@ -54,7 +54,7 @@ block variables
             'Профессиональным спортсменам и всем, кто занимается в спортзале и хочет улучшить эффективность тренировок.',
             'Тем, кто раньше не занимался спортом и недавно начал — чтобы начальный период адаптации прошёл легче.',
             'Тем, кто получил спортивную травму, так как массаж поможет восстановиться гораздо быстрее.',
-            `Если вы почти не занимаетесь спортом, вы тоже можете прийти на спортивный массаж. Но эффективнее для вас будут другие техники, такие как <a class='link link_primary' href='fullbody-massage.html'>общий массаж</a> или, если вас беспокоит спина, <a class='link link_primary' href='back-massage.html'>лечебный массаж спины</a>`,
+            `Если вы почти не занимаетесь спортом, вы тоже можете прийти на спортивный массаж. Но эффективнее для вас будут другие техники, такие как <a class='link link_secondary-dark' href='fullbody-massage.html'>общий массаж</a> или, если вас беспокоит спина, <a class='link link_secondary-dark' href='back-massage.html'>лечебный массаж спины</a>`,
           ]
         }
       ],
