--- a/src/assets/scss/blocks/about-massage/about-massage.scss
+++ b/src/assets/scss/blocks/about-massage/about-massage.scss
@@ -14,11 +14,14 @@
   &__card {
     @include centered-block(40rem);
 
-    margin-bottom: 5rem;
-    padding: 3.2rem;
-    padding-top: 2.8rem;
+    margin-bottom: 4.5rem;
+    padding: 3rem;
 
     box-shadow: 0 0.4rem 2.5rem $x-light-dim-color;
+
+    &_2 {
+      padding-bottom: 0;
+    }
 
     @for $i from 1 to 4 {
       &_#{$i} {
@@ -46,11 +49,7 @@
 
           @include themify() {
             @if $theme-id != 'main' {
-              background-image: url('../../../img/about-massage/#{$theme-id}-about-massage_#{$i}@1x.jpg');
-
-              @include retina(2) {
-                background-image: url('../../../img/about-massage/#{$theme-id}-about-massage_#{$i}@2x.jpg');
-              }
+              background-image: url('../../../img/about-massage/#{$theme-id}-about-massage_#{$i}@2x.jpg');
 
               @include retina(3) {
                 background-image: url('../../../img/about-massage/#{$theme-id}-about-massage_#{$i}@3x.jpg');
@@ -64,16 +63,33 @@
 
   &__caption {
     margin-bottom: 1rem;
+
+    font-size: 1.8rem;
   }
 
   &__text {
     margin-bottom: 1.8rem;
   }
+
+  .theme-6 &,
+  .theme-8 &,
+  .theme-9 &,
+  .theme-10 &,
+  .theme-11 &,
+  .theme-12 & {
+    &__card {
+      &_2 {
+        .about-massage__image {
+          padding-bottom: 58%;
+        }
+      }
+    }
+  }
 }
 
 @media (min-width: $tablet-min-width) {
   .about-massage {
-    margin-bottom: 12rem;
+    margin-bottom: 10rem;
 
     &__content {
       display: flex;
@@ -99,18 +115,44 @@
       &_2 {
         display: flex;
         flex-direction: column;
-        padding-right: 1.5rem;
-        padding-bottom: 0;
-        padding-left: 1.5rem;
-
-        .about-massage__caption,
-        .about-massage__text {
-          padding: 0 2.5rem;
-        }
 
         .about-massage__image {
           margin-top: auto;
           padding-bottom: 70%;
+        }
+      }
+    }
+
+    .theme-1 &,
+    .theme-2 &,
+    .theme-3 &,
+    .theme-4 & {
+      &__card {
+        &_2 {
+          .about-massage__caption,
+          .about-massage__text {
+            padding: 0 2rem;
+          }
+        }
+      }
+    }
+
+    .theme-2 & {
+      &__card {
+        &_2 {
+          .about-massage__image {
+            padding-bottom: 74%;
+          }
+        }
+      }
+    }
+
+    .theme-4 & {
+      &__card {
+        &_2 {
+          .about-massage__image {
+            padding-bottom: 82%;
+          }
         }
       }
     }
@@ -119,21 +161,136 @@
 
 @media (min-width: $s-desktop-min-width) {
   .about-massage {
-    margin-bottom: 15rem;
+    margin-bottom: 12rem;
+
+    &__content {
+      justify-content: space-between;
+      padding: 0 2rem;
+    }
 
     &__title {
       margin-bottom: 6.5rem;
     }
 
     &__card {
-      width: 31%;
-      margin-right: 1rem;
-      margin-left: 1rem;
+      position: relative;
+
+      width: 30.5%;
+      margin: 0;
+      padding: 3.5vw;
+      padding-top: 15rem;
+      padding-bottom: 3rem;
 
       &_1 {
         flex-shrink: 1;
-        margin-right: 1rem;
-        margin-left: 1rem;
+      }
+
+      &_2 {
+        align-self: center;
+        margin: 5rem 4.2%;
+        padding-top: 4rem;
+        padding-bottom: 0;
+      }
+
+      &_1,
+      &_3 {
+        .about-massage__image {
+          @include horizontally-centered();
+
+          top: -6rem;
+        }
+      }
+    }
+
+    .page & {
+      &__card {
+        &_2 {
+          .about-massage__caption,
+          .about-massage__text {
+            padding: 0;
+          }
+        }
+      }
+    }
+
+    .theme-2 & {
+      &__card {
+        &_2 {
+          align-self: stretch;
+          margin-top: 0;
+          margin-bottom: 0;
+        }
+      }
+    }
+
+    .theme-6 & {
+      &__card {
+        &_2 {
+          align-self: stretch;
+          margin-top: 0;
+        }
+      }
+    }
+
+    .theme-7 & {
+      &__card {
+        &_1,
+        &_3 {
+          margin-top: 3rem;
+          margin-bottom: 3rem;
+        }
+
+        &_2 {
+          align-self: stretch;
+          margin-top: 0;
+          margin-bottom: 0;
+        }
+      }
+    }
+
+    .theme-8 &,
+    .theme-9 & {
+      &__card {
+        &_1,
+        &_3 {
+          margin-top: 3rem;
+          margin-bottom: 3rem;
+        }
+
+        &_2 {
+          align-self: stretch;
+          margin-top: 0;
+          margin-bottom: 0;
+        }
+      }
+    }
+
+    .theme-12 & {
+      &__card {
+        &_1,
+        &_3 {
+          margin-top: 3rem;
+        }
+
+        &_2 {
+          align-self: stretch;
+          margin-top: 0;
+          margin-bottom: 3rem;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: $desktop-min-width) {
+  .about-massage {
+    &__card {
+      padding-right: 4rem;
+      padding-left: 4rem;
+
+      &_2 {
+        padding-right: 3.2rem;
+        padding-left: 3.2rem;
       }
     }
   }
