--- a/src/assets/scss/blocks/reusable/link.scss
+++ b/src/assets/scss/blocks/reusable/link.scss
@@ -28,8 +28,8 @@
     }
   }
 
-  &_primary {
-    @include themify() {
+  @include themify() {
+    &_primary {
       color: $color-primary;
 
       @include in-focus() {
@@ -46,14 +46,14 @@
         }
       }
     }
-  }
 
-  &_primary-dark {
-    @include themify() {
+    &_primary-dark {
       color: $color-primary-dark;
 
       @include in-focus() {
         color: $color-primary-dark;
+
+        border-bottom-color: $color-primary-dark;
       }
 
       &.underline {
@@ -64,14 +64,14 @@
         }
       }
     }
-  }
 
-  &_secondary {
-    @include themify() {
+    &_secondary {
       color: $color-secondary;
 
       @include in-focus() {
         color: $color-secondary;
+
+        border-bottom-color: $color-secondary-transparent;
       }
 
       &.underline {
@@ -79,6 +79,24 @@
 
         @include in-focus() {
           border-bottom-color: $color-secondary;
+        }
+      }
+    }
+
+    &_secondary-dark {
+      color: $color-secondary-dark;
+
+      @include in-focus() {
+        color: $color-secondary-dark;
+
+        border-bottom-color: $color-secondary-dark;
+      }
+
+      &.underline {
+        border-bottom-color: $color-secondary-transparent;
+
+        @include in-focus() {
+          border-bottom-color: $color-secondary-dark;
         }
       }
     }
