--- a/src/pug/pages/back-massage.pug
+++ b/src/pug/pages/back-massage.pug
@@ -33,15 +33,15 @@ block variables
         {
           title: 'Что это за процедура?',
           text: [
-            'Лечебный массаж спины в нашей клинике — это авторская методика, входящая в раздел реабилитационной медицины. Она направлена на восстановление и заживление повреждённых межпозвонковых дисков, что позволяет лечить заболевания без операций.',
-            'Боль уменьшается уже после первого сеанса, а в результате курса уходит полностью. Методика абсолютно безопасна и очень эффективна — при  необходимости наши пациенты после лечения делают повторные снимки (рентген, МРТ, КТ), где объективно подтверждается эффект от нашего лечения.'
+            'Лечебный массаж спины в нашей клинике — это авторская методика, входящая в раздел реабилита&shy;ционной медицины. Она направлена на восстановление и заживление повреждённых межпозвонковых дисков, что позволяет лечить заболевания без операций.',
+            'Боль уменьшается уже после первого сеанса, а в результате курса уходит полностью. Методика абсолютно безопасна и очень эффективна — при  необходимости наши пациенты после лечения делают повторные снимки (рентген, МРТ, КТ), где объективно подтвер&shy;ждается эффект от нашего лечения.'
           ]
         },
         {
-          title: 'Массаж точно поможет от боли?',
+          title: 'Массаж точно поможет от&nbsp;боли?',
           text: [
-            'Да, и не только от боли, но и от причин, вызывающих её.Эффект проявляется стремительно, вам станет легче уже после первого сеанса, а после курса вы просто забудете о боли и ощутите другое качество жизни.',
-            'Наш лечебный массаж — очень эффективная техника, которая успешно лечит болезни позвоночника.Мы помогали даже клиентам с серьёзными диагнозами, которых отправляли на операцию.',
+            'Да, и не только от боли, но и от причин, вызывающих её. Эффект проявляется стремительно, вам станет легче уже после первого сеанса, а после курса вы просто забудете о боли и ощутите другое качество жизни.',
+            'Наш лечебный массаж — очень эффективная техника, которая успешно лечит болезни позвоночника. Мы помогали даже клиентам с серьёзными диагнозами, которых отправляли на операцию.',
             'Во время сеанса более 80 % массажного времени уделяется приемам, оказывающим мощное регенерирующее воздействие на костную и хрящевую ткань. Это способствует быстрому и стабильному избавлению от боли и её причин.'
           ]
         },
@@ -50,7 +50,7 @@ block variables
           text: [
             'Это исключено, мы гарантируем абсолютную безопасность. Для нас важнее всего здоровье клиентов, и мы никогда не идём на риск в этом вопросе.',
             'На первом сеансе специалист проведёт исчерпывающую диагностику, установит причину боли, и разработает систему лечения индивидуально для вас.',
-            'Все наши специалисты имеют медицинское образование, и уверены в каждом своём действии.В тех редких случаях, когда у врача есть сомнения, он попросит вас сделать снимки перед тем, как начать лечение.Но большинство зажимов, болезней и воспалений можно вылечить и без МРТ, благодаря профессиональной диагностике специалиста.'
+            'Все наши специалисты имеют медицинское образование, и уверены в каждом своём действии. В тех редких случаях, когда у врача есть сомнения, он попросит вас сделать снимки перед тем, как начать лечение. Но большинство зажимов, болезней и воспалений можно вылечить и без МРТ, благодаря профессиональной диагностике специалиста.'
           ]
         }
       ],
@@ -138,14 +138,11 @@ block variables
     }
 
 block content
-  section
-    .container
-      h1 Лечебный массаж спины
-      include ../includes/modules/content/about-massage
-      include ../includes/modules/content/application-form/application-block
-      include ../includes/modules/content/reviews-block
-      include ../includes/modules/content/features-list
-      include ../includes/modules/content/price-list
-      include ../includes/modules/footer/map-block
+  include ../includes/modules/content/about-massage
+  include ../includes/modules/content/application-form/application-block
+  include ../includes/modules/content/reviews-block
+  include ../includes/modules/content/features-list
+  include ../includes/modules/content/price-list
+  include ../includes/modules/footer/map-block
 
 block script
